--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-<<<<<<< HEAD
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -10,22 +9,7 @@
 <body>
 
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti sunt, ex soluta provident illo amet sit laboriosam consequatur quas? Numquam quae velit cum, excepturi molestias quidem placeat voluptates harum ducimus!</p>
-
+   <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Impedit autem magnam culpa harum, nisi a maiores cupiditate tempora quis quia amet. Porro praesentium ullam libero est. Laboriosam at eum obcaecati?</p>
     
 </body>
-=======
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document Spec</title>
-</head>
-<body>
-
-
-    
-</body>
->>>>>>> 24bc547dbfd573b2e2c624456dc1af5f404d3eb4
 </html> 
