--- a/index.html
+++ b/index.html
@@ -5,11 +5,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document Spec</title>
+    <link rel="stylesheet" type="text/css" href="/style.css" />
 </head>
-<body>
-
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti sunt, ex soluta provident illo amet sit laboriosam consequatur quas? Numquam quae velit cum, excepturi molestias quidem placeat voluptates harum ducimus!</p>
-   <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Impedit autem magnam culpa harum, nisi a maiores cupiditate tempora quis quia amet. Porro praesentium ullam libero est. Laboriosam at eum obcaecati?</p>
+<body >
+    <div class="container">
+        <img src="\copy.jpg" alt="" class="skp" id="id1">
+        <div class="topleft">CAKEIN</div>
+      </div>
+    
+   
+   
     
 </body>
 </html> 
