--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body >
     <div class="container">
-        <img src="/piccake.jpg" alt="No image" class="skp" id="id1">
+        <img src="https://github.com/skp563e2/Web.Dev-Spectrum.PJ/blob/main/piccake.jpg" alt="No image" class="skp" id="id1">
         <div class="topleft">CAKEIN</div>
       </div>
     
