--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body >
     <div class="container">
-        <img src="/piccake.jpg" alt="No image" class="skp" id="id1">
+        <img src="/piccake.JPG" alt="No image" class="skp" id="id1">
         <div class="topleft">CAKEIN</div>
       </div>
     
