--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document Spec</title>
-    <link rel="stylesheet" type="text/css" href="/blob/main/blob/main/style.css" />
+    <link rel="stylesheet" type="text/css" href="" />
 </head>
 <body>
     <div class="container">
