--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document Spec</title>
-    <link rel="stylesheet" type="text/css" href="" />
+    <link rel="stylesheet" type="text/css" href="https://github.com/skp563e2/Web.Dev-Spectrum.PJ/blob/main/images/piccake.jpg" />
 </head>
 <body>
     <div class="container">
