--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+;;<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -13,8 +13,7 @@
         <div class="topleft">CAKEIN</div>
       </div>
     
-   kh
-   
+ 
     
 </body>
 </html> 
