--- a/index.html
+++ b/index.html
@@ -8,11 +8,13 @@
     <link rel="stylesheet" href="./style.css" />
 </head>
 <body>
+    <header>
     <div class="container">
-        <img src="./images/front.jpg" alt="No image" class="skp" id="id1">
-        <div class="topleft">CAKEIN</div>
+        <div class="cake">
+            <span id="ck">CAKE</span><span id="in">IN</span>
+        </div>
       </div>
-    
+    </header>
  
     
 </body>
