--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document Spec</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Red+Hat+Display:wght@300&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./style.css" />
@@ -14,16 +17,52 @@
 
 <body>
     <header>
-        
-            <div class="cake">
-                <span id="ck">CAKE</span><span id="in">IN</span>
-            </div>
-        <nav class="nav">
-            <div class="Home">Home</div>
-            <div class="product">Product</div>
-            <div class="gallery">Gallery</div>
-            
+
+        <div class="cake">
+            <span id="ck">CAKE</span><span id="in">IN</span>
+        </div>
+        <nav class="navbar">
+            <!-- LOGO -->
+
+
+            <!-- NAVIGATION MENU -->
+            <ul class="nav-links">
+                <!-- USING CHECKBOX HACK -->
+
+                <!-- NAVIGATION MENUS -->
+                <div class="menu">
+                    <li><a href="/">Home</a></li>
+                    <li><a href="/">Product</a></li>
+                    <li class="services">
+                        <a href="/">Gallery</a>
+                        <!-- DROPDOWN MENU -->
+
+
+                    </li>
+
+
+                </div>
+
+            </ul>
         </nav>
+
+        <a class="contact" href="/">Contact Us</a>
+        <span class="sweet">
+        <h1>Sweet chocolate <br>
+         low fat </h1> <br>
+         <p class="pe">Chocolate  cake  with  vanilla  </p> 
+       <p class="p">topped with thicked chocolate
+            <br>and decorated with berries</p> 
+     <div class="c">
+       <div class="g">    
+         <p class="play">GET IT ON</p>
+         <p class="store">Google Play</p>
+       </div>
+       <div class="a">
+         <p class="apple">Available on the </p>
+         <p class="str">App Store</p> 
+       </div>
+     </div>
     </header>
 
 
