--- a/index.html
+++ b/index.html
@@ -53,19 +53,10 @@
          <p class="pe">Chocolate  cake  with  vanilla  </p> 
        <p class="p">topped with thicked chocolate
             <br>and decorated with berries</p> 
-     <div class="c">
-       <div class="g">    
-         <p class="play">GET IT ON</p>
-         <p class="store">Google Play</p>
-       </div>
-       <div class="a">
-         <p class="apple">Available on the </p>
-         <p class="str">App Store</p> 
-       </div>
-     </div>
-    </header>
-
-
+            <span class="pl">
+       <div class="g"><img src=".\images\google-play-badge.png" alt=""></div>
+        <div class="app"><img src=".\images\download-on-the-app-store.svg" alt=""></div>
+</span>
 </body>
 
 </html>
