--- a/index.html
+++ b/index.html
@@ -2,61 +2,252 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document Spec</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Red+Hat+Display:wght@300&display=swap" rel="stylesheet">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="./style.css" />
+   <meta charset="UTF-8">
+   <meta http-equiv="X-UA-Compatible" content="IE=edge">
+   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+   <title>Document Spec</title>
+   <link rel="preconnect" href="https://fonts.googleapis.com">
+   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+   <link href="https://fonts.googleapis.com/css2?family=Red+Hat+Display:wght@300&display=swap" rel="stylesheet">
+   <link rel="preconnect" href="https://fonts.googleapis.com">
+   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+   <link href="https://fonts.googleapis.com/css2?family=Playfair+Display&display=swap" rel="stylesheet">
+   <link rel="stylesheet" href="./style.css" />
 </head>
 
 <body>
-    <header>
+   <header>
 
-        <div class="cake">
-            <span id="ck">CAKE</span><span id="in">IN</span>
-        </div>
-        <nav class="navbar">
-            <!-- LOGO -->
-
-
-            <!-- NAVIGATION MENU -->
-            <ul class="nav-links">
-                <!-- USING CHECKBOX HACK -->
-
-                <!-- NAVIGATION MENUS -->
-                <div class="menu">
-                    <li><a href="/">Home</a></li>
-                    <li><a href="/">Product</a></li>
-                    <li class="services">
-                        <a href="/">Gallery</a>
-                        <!-- DROPDOWN MENU -->
+      <div class="cake">
+         <span id="ck">CAKE</span><span id="in">IN</span>
+      </div>
+      <nav class="navbar">
+         <!-- LOGO -->
 
 
-                    </li>
+         <!-- NAVIGATION MENU -->
+         <ul class="nav-links">
+            <!-- USING CHECKBOX HACK -->
+
+            <!-- NAVIGATION MENUS -->
+            <div class="menu">
+               <li><a href="/">Home</a></li>
+               <li><a href="/">Product</a></li>
+               <li class="services">
+                  <a href="/">Gallery</a>
+                  <!-- DROPDOWN MENU -->
 
 
-                </div>
+               </li>
 
-            </ul>
-        </nav>
 
-        <a class="contact" href="/">Contact Us</a>
-        <span class="sweet">
-        <h1>Sweet chocolate <br>
-         low fat </h1> <br>
-         <p class="pe">Chocolate  cake  with  vanilla  </p> 
-       <p class="p">topped with thicked chocolate
-            <br>and decorated with berries</p> 
-            <span class="pl">
-       <div class="g"><img src=".\images\google-play-badge.png" alt=""></div>
-        <div class="app"><img src=".\images\download-on-the-app-store.svg" alt=""></div>
-</span>
+            </div>
+
+         </ul>
+      </nav>
+
+      <a class="contact" href="/">Contact Us</a>
+      <span class="sweet">
+         <h1>Sweet chocolate <br>
+            low fat </h1> <br>
+         <p class="pe">Chocolate cake with vanilla </p>
+         <p class="p">topped with thicked chocolate
+            <br>and decorated with berries
+         </p>
+         <div class="pl">
+            <div class="g"><img src=".\images\google-play-badge.png" alt=""></div>
+            <div class="app"><img src=".\images\download-on-the-app-store.svg" alt=""></div>
+         </div>
+      </span>
+   </header>
+
+
+
+
+   <section class="middle">
+
+      <p class="discover">Discovery the taste of</p>
+      <h1 class="taste">Cake Collection</h1>
+      <div class="sec">
+         <p class="rasp">
+            Raspberry<br>brownies cake<br><br>Bronies cake with rich<br>raspberry filling
+         </p>
+         <p class="bery">
+            Raspberry<br>brownies cake<br><br>Bronies cake with rich<br>raspberry filling
+         </p>
+         <p class="choc">
+            Raspberry<br>brownies cake<br><br>Bronies cake with rich<br>raspberry filling
+         </p>
+         <p class="red">
+            Raspberry<br>brownies cake<br><br>Bronies cake with rich<br>raspberry filling
+         </p>
+      </div>
+   </section>
+
+
+
+   <section class="recomdation">
+      <div class="recom">
+
+         <h1 class="re">Our recommendation Cake</h1>
+         <br><br>
+         <p class="com">cake recommendations from us specially for you</p>
+
+      </div>
+      <div class="mini">
+         <p class="crunchy">
+
+         </p>
+         <div class="sugar">
+            <h1 class="minicake">Berry mini cake</h1>
+            <p class="top">A crunchy cake topped with assorted berries and<br>sprinkled with powered sugar that makes
+               you
+               happy</p>
+            <h1 class="rup">$10</h1>
+            <a href="/" class="buy">Buy Now</a>
+
+         </div>
+      </div>
+
+   </section>
+
+
+
+   <section class="about">
+
+      <h1 class="aboutus">
+         About us
+      </h1>
+      <div class="abs">
+         <p class="cakein">
+            cakein is a platform provides various kinds of cakes
+            <br>
+
+            ranging from cheesecakes,sponge cakes,brownies
+            <br>
+
+            chiffon cakes ,and others.You can also order cakes
+            <br>
+
+            according to your wishes.so ? What are you waiting for ?
+            <br>
+            you just order as you wish we will make it happen
+         </p>
+         <div class="empty">
+
+         </div>
+      </div>
+   </section>
+   <section class="last">
+      <div class="lstpge">
+         Testimonials
+
+      </div>
+
+
+      <!-- Additional required wrapper -->
+      <div class="swiper">
+         <!-- Slides -->
+         <div class="pic">
+
+         </div>
+         <div class="swiper-slide1">
+            <p>
+               Cassandra Winter New York, United States<br>" I'm very happy to order cakes here,because they
+               can<br>always
+               make the cake the way i want,and they give<br>good advice,feom the cake
+               ingredients,decorations<br>and the taste of the cake itself,it's just amazing!"
+            </p>
+         </div>
+
+
+      </div>
+      <!-- If we need pagination -->
+
+
+   </section>
+
+   <section class="footer">
+
+      <div class="get">
+         <h1 class="dis">
+            Get Discount Promo
+         </h1>
+         <h1 class="disc">
+            for new member
+         </h1>
+         <span class="reg">
+            <a href="\">Register Now</a>
+         </span>
+      </div>
+      <div class="panel">
+         <h1 class="f">
+            CAKEIN
+         </h1>
+
+         <div class="second">
+            <div class="hom">
+               <a href="/">Help</a>
+            </div>
+            <div class="home">
+               <a href="/">FAQ</a>
+            </div>
+            <div class="home">
+               <a href="/">About us</a>
+            </div>
+
+         </div>
+         <div class="third">
+            <div class="hom">
+               <a href="/">Our Products</a>
+            </div>
+            <div class="home">
+               <a href="/">Cheese cake</a>
+            </div>
+            <div class="home">
+               <a href="/">Sponge cake</a>
+            </div>
+            <div class="home">
+               <a href="/">Butter cake</a>
+            </div>
+            <div class="home">
+               <a href="/">Cup cake </a>
+            </div>
+         </div>
+         <div class="fourth">
+            <div class="hom">
+               <a href="/">Contact us</a>
+            </div>
+            <div class="home">
+               <a href="/">Email</a>
+            </div>
+            <div class="home">
+               <a href="/">Socia Media</a>
+            </div>
+         </div>
+         <div class="five">
+            <div class="hom">
+               <a href="/">Shop online</a>
+            </div>
+         </div>
+         <div class="six">
+            <a href="/">Connect with us</a>
+         </div>
+      </div>
+
+
+
+   </section>
+
+
+
+
+
+
+
+
 </body>
+
+
 
 </html>
