--- a/index.html
+++ b/index.html
@@ -16,14 +16,17 @@
 </head>
 
 <body>
+
+<!-- ------------------------skp header---------------------------------- -->
    <header>
 
       <div class="cake">
          <span id="ck">CAKE</span><span id="in">IN</span>
       </div>
+
+      
       <nav class="navbar">
          <!-- LOGO -->
-
 
          <!-- NAVIGATION MENU -->
          <ul class="nav-links">
@@ -31,14 +34,9 @@
 
             <!-- NAVIGATION MENUS -->
             <div class="menu">
-               <li><a href="/">Home</a></li>
+               <li class="active"><a href="/">Home</a></li>
                <li><a href="/">Product</a></li>
-               <li class="services">
-                  <a href="/">Gallery</a>
-                  <!-- DROPDOWN MENU -->
-
-
-               </li>
+               <li><a href="/">Gallery</a></li>
 
 
             </div>
@@ -49,7 +47,7 @@
       <a class="contact" href="/">Contact Us</a>
       <span class="sweet">
          <h1>Sweet chocolate <br>
-            low fat </h1> <br>
+            low fat ◈</h1> <br>
          <p class="pe">Chocolate cake with vanilla </p>
          <p class="p">topped with thicked chocolate
             <br>and decorated with berries
@@ -61,32 +59,35 @@
       </span>
    </header>
 
+<!-- ---------------------------------skp 2nd section------------------- -->
 
 
-
-   <section class="middle">
+   <section class="middle" id="Sumit">
 
       <p class="discover">Discovery the taste of</p>
       <h1 class="taste">Cake Collection</h1>
       <div class="sec">
          <p class="rasp">
-            Raspberry<br>brownies cake<br><br>Bronies cake with rich<br>raspberry filling
+            ◈<br>Raspberry<br>brownies cake<br><br>
+            <span class="rasp2">Bronies cake with rich<br>raspberry filling</span>
          </p>
          <p class="bery">
-            Raspberry<br>brownies cake<br><br>Bronies cake with rich<br>raspberry filling
+            ◈<br>Berry cryspy cake<br><br><br>
+            <span class="bery2">Crispy slicke of toast<br>filled with cream and <br>topped with berries</span>
          </p>
          <p class="choc">
-            Raspberry<br>brownies cake<br><br>Bronies cake with rich<br>raspberry filling
-         </p>
+            ◈<br>Chocolate red<br>macaron cake<br><br>
+            <span class="choc2">Chocolate cake with<br>sweet red macarons  </span>     </p>
          <p class="red">
-            Raspberry<br>brownies cake<br><br>Bronies cake with rich<br>raspberry filling
+            ◈<br>Red velvet<br>cheese cake<br><br>
+            <span class="red2">Red velvet cake with a<br>layer of cheesecake <br>underneath </span>
          </p>
       </div>
    </section>
 
+<!-- ------------------------ skp end-------------------------------- -->
 
-
-   <section class="recomdation">
+   <section class="recomdation" id="Soum">
       <div class="recom">
 
          <h1 class="re">Our recommendation Cake</h1>
@@ -113,7 +114,7 @@
 
 
 
-   <section class="about">
+   <section class="about" id="soum">
 
       <h1 class="aboutus">
          About us
@@ -138,7 +139,9 @@
          </div>
       </div>
    </section>
-   <section class="last">
+
+
+   <section class="last" id="">
       <div class="lstpge">
          Testimonials
 
