--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display&display=swap" rel="stylesheet">
    <link rel="stylesheet" href="./style.css" />
+   <link rel="stylesheet" href="./style_skp.css" />
+   <script src="./script_skp.js"></script>
 </head>
 
 <body>
@@ -67,20 +69,21 @@
       <p class="discover">Discovery the taste of</p>
       <h1 class="taste">Cake Collection</h1>
       <div class="sec">
-         <p class="rasp">
+         <p class="rasp"  onmouseover="hov('ras')" onmouseout="hovOut('ras')">
             ◈<br>Raspberry<br>brownies cake<br><br>
-            <span class="rasp2">Bronies cake with rich<br>raspberry filling</span>
+            <span class="rasp2" id="ras">Bronies cake with rich<br>raspberry filling</span>
          </p>
-         <p class="bery">
+         <p class="bery" onmouseover="hov('ber')" onmouseout="hovOut('ber')">
             ◈<br>Berry cryspy cake<br><br><br>
-            <span class="bery2">Crispy slicke of toast<br>filled with cream and <br>topped with berries</span>
+            <span class="bery2" id="ber">Crispy slicke of toast<br>filled with cream and <br>topped with berries</span>
          </p>
-         <p class="choc">
+         <p class="choc" onmouseover="hov('cho')" onmouseout="hovOut('cho')">
             ◈<br>Chocolate red<br>macaron cake<br><br>
-            <span class="choc2">Chocolate cake with<br>sweet red macarons  </span>     </p>
-         <p class="red">
+            <span class="choc2" id="cho">Chocolate cake with<br>sweet red macarons  </span>     
+         </p>
+         <p class="red" onmouseover="hov('red')" onmouseout="hovOut('red')">
             ◈<br>Red velvet<br>cheese cake<br><br>
-            <span class="red2">Red velvet cake with a<br>layer of cheesecake <br>underneath </span>
+            <span class="red2" id="red">Red velvet cake with a<br>layer of cheesecake <br>underneath </span>
          </p>
       </div>
    </section>
