--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
       <a class="contact" href="/">Contact Us</a>
       <span class="sweet">
          <h1>Sweet chocolate <br>
-            low fat ◈</h1> <br>
+            low fat &#9672</h1> <br>
          <p class="pe">Chocolate cake with vanilla </p>
          <p class="p">topped with thicked chocolate
             <br>and decorated with berries
@@ -70,19 +70,19 @@
       <h1 class="taste">Cake Collection</h1>
       <div class="sec">
          <p class="rasp"  onmouseover="hov('ras')" onmouseout="hovOut('ras')">
-            ◈<br>Raspberry<br>brownies cake<br><br>
+            &#9672<br>Raspberry<br>brownies cake<br><br>
             <span class="rasp2" id="ras">Bronies cake with rich<br>raspberry filling</span>
          </p>
          <p class="bery" onmouseover="hov('ber')" onmouseout="hovOut('ber')">
-            ◈<br>Berry cryspy cake<br><br><br>
+            &#9672<br>Berry cryspy cake<br><br><br>
             <span class="bery2" id="ber">Crispy slicke of toast<br>filled with cream and <br>topped with berries</span>
          </p>
          <p class="choc" onmouseover="hov('cho')" onmouseout="hovOut('cho')">
-            ◈<br>Chocolate red<br>macaron cake<br><br>
+            &#9672<br>Chocolate red<br>macaron cake<br><br>
             <span class="choc2" id="cho">Chocolate cake with<br>sweet red macarons  </span>     
          </p>
          <p class="red" onmouseover="hov('red')" onmouseout="hovOut('red')">
-            ◈<br>Red velvet<br>cheese cake<br><br>
+            &#9672<br>Red velvet<br>cheese cake<br><br>
             <span class="red2" id="red">Red velvet cake with a<br>layer of cheesecake <br>underneath </span>
          </p>
       </div>
