--- a/index.html
+++ b/index.html
@@ -15,9 +15,11 @@
 
 
 
-   <link rel="stylesheet" href="./style.css" />
-   <link rel="stylesheet" href="./style_skp.css" />
-   <link rel="stylesheet" href="./style_ans.css" />
+   <link rel="stylesheet" href="./style_ak_sec2.css" />
+   <link rel="stylesheet" href="./style_skp_head.css" />
+   <link rel="stylesheet" href="./style_ans_recom.css" />
+   <link rel="stylesheet" href="./style_sn_testi.css" />
+   <link rel="stylesheet" href="./style_srp_foot.css" />
 
    <script src="./script.js"></script>
 </head>
@@ -68,6 +70,9 @@
 
 <!-- ---------------------------------skp 2nd section------------------- -->
 
+<br>
+<br>
+
 
    <section class="middle" id="Sumit">
 
@@ -95,6 +100,9 @@
 
 <!-- ------------------------ skp end-------------------------------- -->
 
+<br>
+<br>
+<br>
    <section class="recomdation" id="Soum">
       <div class="recom">
          <h1 class="re">Our recommendation Cake</h1>
@@ -176,30 +184,27 @@
 
    <section class="about" id="soum">
 
-      <h1 class="aboutus">
-         About us
-      </h1>
+      
       <div class="abs">
-         <p class="cakein">
+         <div class="cakein">
+            <h1 class="aboutus">
+               About us &#9672
+            </h1>
+            <p class="qad">
             cakein is a platform provides various kinds of cakes
             ranging from cheesecakes,sponge cakes,brownies
             chiffon cakes ,and others.You can also order cakes
             according to your wishes.so ? What are you waiting for ?
-            you just order as you wish we will make it happen
-         </p>
-         <div class="empty">
-
+            you just order as you wish we will make it happen</p>
          </div>
+         <div class="empty"></div>
       </div>
    </section>
 
 
 <!-- -------------------------------------------------------------------- -->
 
-<br>
-<br><br><br><br><br><br>
-<br><br><br><br><br><br>
-<br><br><br><br><br><br>
+
 
 
    <section class="last" id="">
@@ -274,8 +279,6 @@
 
    </section>
 
-
-   <br><br><br><br><br><br>
    <!-- ------------------------------------------------------------------- -->
 
    <section class="footer">
@@ -287,10 +290,12 @@
          <h1 class="disc">
             for new member
          </h1>
-         <span class="reg">
-            <a href="\">Register Now</a>
-         </span>
+         <button class="reg">
+            Register Now
+         </button>
       </div>
+
+
       <div class="panel">
          <h1 class="f">
             CAKEIN
@@ -337,12 +342,19 @@
             </div>
          </div>
          <div class="five">
-            <div class="hom">
+            <div class="hom home">
                <a href="/">Shop online</a>
             </div>
          </div>
          <div class="six">
+            <div class="hom">
             <a href="/">Connect with us</a>
+            </div>
+            <div class="icon">
+            <a class="ico" href="/"><ion-icon name="logo-instagram"></ion-icon></a>
+            <a class="ico" href="/"><ion-icon name="logo-facebook"></ion-icon></a>
+            <a class="ico" href="/"><ion-icon name="logo-pinterest"></ion-icon></a>
+         </div>
          </div>
       </div>
 
@@ -356,7 +368,8 @@
 
 
 
-
+   <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
+   <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
 </body>
 
 
